MainActivity and Fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoffeeHouse"
         tools:targetApi="31">
+
         <activity
-            android:name=".HelloWorldActivity"
-            android:exported="true"
-            android:theme="@style/Theme.CoffeeHouse">
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
